--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js:
-  - "6.1"
+  - ">14"
 before_script:
-  - npm install -g gulp
+  - npm install
 script:
   - ./node_modules/testem/testem.js ci
