--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "test-dev": "./node_modules/testem/testem.js -f dev.testem.json",
     "build": "rollup -c ./rollup.config.js",
     "build-test": "rollup -c ./test.rollup.config.js",
-    "prepare": "rollup -c ./rollup.config.js"
+    "prepare": "rollup -c ./rollup.config.js",
+    "pub": "yarn build && yarn publish --tag vue3"
   },
+  "files": [
+    "build",
+    "src"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/alfhen/vue-cookie.git"
